syntax = 'proto3';

package echo;

option java_package = "com.turbonomic.demo.spring";

import "google/api/annotations.proto";

message EchoContent {
    string content = 1;
}

message Echo {
    int64 id = 1;
    EchoContent content = 2;
}

message GetEchoRequest {
    int64 id = 1;
}

message GetEchoResponse {
    Echo echo = 1;
}

message DeleteEchoRequest {
    int64 id = 1;
}

message DeleteEchoResponse {
    Echo echo = 1;
}

message CreateEchoRequest {
    int64 id = 1;
    EchoContent content = 2;
}

message CreateEchoResponse {
    Echo echo = 1;
}

message UpdateEchoRequest {
    int64 id = 1;
    EchoContent new_content = 2;
}

message UpdateEchoResponse {
    Echo echo = 1;
}

service EchoService {

    rpc getEcho(GetEchoRequest) returns (GetEchoResponse) {
        option (google.api.http) = {
            get: "/echo/{id}"
        };
    }

    rpc createEcho(CreateEchoRequest) returns (CreateEchoResponse) {
        option (google.api.http) = {
            post: "/echo/{id}"
            body: "content"
            additional_bindings {
                post: "/echo"
                body: "*"
            }
        };
    }

    rpc updateEcho(UpdateEchoRequest) returns (UpdateEchoResponse) {
        option (google.api.http) = {
            put: "/echo/{id}"
            body: "new_content"
            additional_bindings {
                put: "/echo/{id}/{new_content.content}"
            }
        };
    }

    rpc deleteEcho(DeleteEchoRequest) returns (DeleteEchoResponse) {
        option (google.api.http) = {
            delete: "/echo/{id}"
        };
    }
}
